[package]
name = "pi-panel"
version = "0.1.1"
authors = ["KK <kk-pub@outlook.com>"]
edition = "2018"

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
systemstat = "0.1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-files = "0.2.1"
structopt = "0.3.7"
lazy_static = "1.4.0"